--- a/templates/base/package.json
+++ b/templates/base/package.json
@@ -5,11 +5,41 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build dev",
-    "start": "next start dev"
+    "start": "next start dev",
+    "lint:js": "eslint src/",
+    "lint:js:fix": "npm run lint:js --fix",
+    "lint:css": "stylelint src/**/*.js",
+    "lint:css:fix": "npm run lint:css --fix",
+    "lint": "npm run lint:js && npm run lint:css",
+    "pretty": "prettier --write **/*.{js,json,css}"
   },
   "dependencies": {
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-extra-rules": "0.0.0-development",
+    "eslint-plugin-flowtype": "^4.4.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.4",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "lint-staged": "^9.4.3",
+    "prettier": "1.19.1",
+    "husky": "^3.1.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-css-modules": "^2.1.0",
+    "stylelint-config-prettier": "^6.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-formatter-pretty": "^1.1.3",
+    "stylelint-processor-styled-components": "^1.8.0"
   }
 }
